--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
         "publish": "git ci -am modified && git push origin master"
     },
     "dependencies": {
-        "acorn": "^6.0.7",
-        "escodegen": "^1.11.0",
+        "acorn": "^6.4.2",
+        "escodegen": "^1.14.3",
         "escope": "^3.6.0",
-        "espree": "^5.0.0",
+        "espree": "^7.3.1",
         "esprima": "^4.0.1",
-        "estraverse": ">= 1.3.0",
-        "pegjs": ">= 0.7.0",
+        "estraverse": "^5.2.0",
+        "pegjs": "^0.10.0",
         "readline": "^1.3.0",
-        "underscore": ">= 1.5.1"
+        "underscore": "^1.12.0"
     },
     "version": "0.1.0"
 }
