--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
     "author": "Patrick Dubroy <pdubroy@gmail.com>",
     "scripts": {
         "sh": "node --inspect-brk syntax-highlight.js",
-        "grep": "node --inspect-brk idgrep.js",
+        "grep": "node --inspect-brk idgrep.js hacky.js",
         "log": "node --inspect-brk logging.js",
-        "publish": "git ci -am modified && git push origin master"
+        "solution": "node ./p0-t0-esprima-logging-sol.js input.js -o out.js && node out.js",
+        "publish": "git ci -am modified && git push origin master",
+        "private": "git ci -am private && git push private private"
     },
     "dependencies": {
-        "acorn": "^6.4.2",
-        "commander": "^7.1.0",
-        "escodegen": "^1.14.3",
+        "acorn": "^7.1.0",
+        "acorn-walk": "^7.0.0",
+        "commander": "^4.1.0",
+        "escodegen": "^1.13.0",
         "escope": "^3.6.0",
-        "espree": "^7.3.1",
+        "espree": "^6.1.2",
         "esprima": "^4.0.1",
-        "estraverse": "^5.2.0",
+        "estraverse": "^4.3.0",
         "pegjs": "^0.10.0",
         "readline": "^1.3.0",
-        "underscore": "^1.12.0"
+        "underscore": "^1.9.2"
     },
-    "version": "0.1.0"
+    "version": "0.1.0",
+    "description": "Example for PL ULL"
 }
