--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
         "private": "git ci -am private && git push private private"
     },
     "dependencies": {
-        "acorn": "^7.1.0",
-        "acorn-walk": "^7.0.0",
-        "commander": "^7.1.0",
-        "escodegen": "^1.13.0",
-        "escope": "^3.6.0",
-        "espree": "^7.3.1",
-        "esprima": "^4.0.1",
-        "estraverse": "^4.3.0",
-        "pegjs": "^0.10.0",
-        "readline": "^1.3.0",
-        "underscore": "^1.9.2"
+        "acorn": "*",
+        "acorn-walk": "*",
+        "commander": "*",
+        "escodegen": "*",
+        "escope": "*",
+        "espree": "*",
+        "esprima": "*",
+        "estraverse": "*",
+        "pegjs": "*",
+        "readline": "*",
+        "underscore": "*"
     },
     "version": "0.1.0",
     "description": "Example for PL ULL"
