--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
         "private": "git ci -am private && git push private private"
     },
     "dependencies": {
-        "acorn": "*",
-        "acorn-walk": "*",
+        "acorn": "^8.14.0",
+        "acorn-walk": "^8.3.4",
         "commander": "*",
-        "escodegen": "*",
-        "escope": "*",
-        "espree": "*",
-        "esprima": "*",
-        "estraverse": "*",
-        "pegjs": "*",
+        "escodegen": "^2.1.0",
+        "escope": "^4.0.0",
+        "espree": "^10.3.0",
+        "esprima": "^4.0.1",
+        "estraverse": "^5.3.0",
+        "pegjs": "^0.10.0",
         "readline": "*",
         "underscore": "*"
     },
